<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_reminders"
            android:title="@string/reminders" />
    </group>
    <item
        android:title="@string/labels">
        <menu>
            <item
                android:id="@+id/nav_inspiration"
                android:title="@string/inspiration" />
            <item
                android:id="@+id/nav_personal"
                android:title="@string/personal" />
            <item
                android:id="@+id/nav_work"
                android:title="@string/work" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive" />
    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_trash"
        android:title="@string/trash" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>
