<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <!-- Back button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="58dp"
        android:layout_height="70dp"
        android:layout_gravity="start"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/back"
        android:src="@drawable/arrow_back" />

    <TextView
        android:id="@+id/save"
        android:layout_width="98dp"
        android:layout_height="65dp"
        android:layout_gravity="start"
        android:layout_marginStart="300dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back"
        android:src="@drawable/arrow_back"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Note Title EditText -->
    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:hint="@string/title"
        android:autofillHints=""
        android:inputType="text"
        android:padding="16dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Note Content EditText -->
    <EditText
        android:id="@+id/noteContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/noteTitle"
        android:padding="16dp"
        android:textSize="16sp"
        android:autofillHints=""
        android:hint="@string/notes"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:layout_marginTop="8dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
